# webgpu-ggml

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
